MODROLESKC-408: add dedup param for roles/capabilities API and performance indexes (#369)
Co-authored-by: Dmytro Tkachenko <dmytro_tkachenko@epam.com>
(cherry picked from commit 5a79f480a9dafe03ad0b4ead3d5f05b75e2f00c3)